<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>recommender</artifactId>
	<packaging>war</packaging>
	<name>TeaStore Recommender</name>
	<url>http://descartes.tools</url>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<!-- Internal Dependencies -->
		<dependency>
			<groupId>tools.descartes.teastore</groupId>
			<artifactId>registryclient</artifactId>
			<version>${teastoreversion}</version>
		</dependency>
		<dependency>
			<groupId>tools.descartes.teastore</groupId>
			<artifactId>kieker.probes</artifactId>
			<version>${teastoreversion}</version>
		</dependency>

		<dependency>
			<groupId>jakarta.activation</groupId>
			<artifactId>jakarta.activation-api</artifactId>
			<version>2.0.1</version>
		</dependency>

		<!-- Dependencies only needed for compilation -->
		<dependency>
			<groupId>jakarta.platform</groupId>
			<artifactId>jakarta.jakartaee-api</artifactId>
			<version>9.0.0</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test Dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<finalName>tools.descartes.teastore.recommender</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<reuseForks>false</reuseForks>
					<forkCount>1</forkCount>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<parent>
		<groupId>tools.descartes.teastore</groupId>
		<artifactId>parent</artifactId>
		<version>${teastoreversion}</version>
		<relativePath>../..</relativePath>
	</parent>
</project>
